--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>My App</title>
     <link href="style/kendo.mobile.all.min.css" rel="stylesheet" />
+      <link href="style/style.css" rel="stylesheet" />
 	
 </head>
 <body>
