--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     {
         transition:'slide'
     });
+    
+     new kendo.mobile.Application($(document.body), {
+         platform: "ios"
+     });
+     
 </script>
 
 
